--- a/custom_components/lastfm_scrobbler/manifest.json
+++ b/custom_components/lastfm_scrobbler/manifest.json
@@ -4,6 +4,11 @@
   "documentation": "https://github.com/valentin-gosselin/lastfm-scrobbler-ha-integration/blob/main/README.md",
   "dependencies": [],
   "version": "1.1.1",
-  "codeowners": ["@valentin-gosselin"],
-  "requirements": ["requests", "pylast"]
+  "codeowners": [
+    "@valentin-gosselin"
+  ],
+  "requirements": [
+    "requests",
+    "pylast"
+  ]
 }
